--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -62,18 +62,17 @@ enhancers and TF binding sites to regulated genes.
 
 ## Enhancers
 
-Enhancers where originally defined as genomic regions that enhance the 
-expression of a reporter gene, when placed experimentally in front of a minimal promoter. 
+Enhancers were originally defined as genomic regions that enhance the expression of a reporter gene, when placed experimentally in front of a minimal promoter. 
 [@Banerji1981; @Shlyueva2014]. Enhancer activity can also be detected 
 genome-wide by specific patterns of open chromatin using DNase-seq [@Song2010] 
 or ATAC-seq [@Buenrostro2013] or posttranslational modification of histones, such as
 H3K27ac by ChIP-seq [@Creyghton2010].
-Complex regulation of developmental genes is often archived by additive affects of multiple enhancers. 
-For example the $\alpha$-globin gene locus is controlled by multiple enhancers, whereby each 
+Complex regulation of developmental genes is often archived by additive effects of multiple enhancers. 
+For example, the $\alpha$-globin gene locus is controlled by multiple enhancers, whereby each 
 enhancer elements act independently and in an additive fashion without evidence 
-of synergistic or higher-order effects [@Hay2016]. Also the Indian hedgehog (Ihh) locus is regulated by multiple enhancers with individual combinations of tissue specificities that function in an additive manner [@Will2017].
+of synergistic or higher-order effects [@Hay2016]. Also, the Indian hedgehog (Ihh) locus is regulated by multiple enhancers with individual combinations of tissue specificities that function in an additive manner [@Will2017].
 Experimental variation for of the copy number of enhancers is associated with expression strength.
-Significantly reduction of the expression of the oncogene *PIMI* could not be archived by perturbing a single enhancers, but only by combinatorial repression of several weak enhancers [@Xie2017].
+Significantly reduction of the expression of the oncogene *PIMI* could not be archived by perturbing a single enhancer, but only by combinatorial repression of several weak enhancers [@Xie2017].
 (Enhancers are reviewed in [@Spitz2012] and [@Andrey2017])
 
 ## Methods to probe the 3D chromatin archtiecture
@@ -84,26 +83,24 @@ Significantly reduction of the expression of the oncogene *PIMI* could not be ar
 
 ### Microscopy-based techniques to visuallize the genome in 3D
 Historically, the organization of chromosomes and specific loci within the nucleus have mostly been studied using fluorescent *in situ* hybridization (FISH) experiments.
-FISH is limited to examine a few pre-defined loci a few hundred cells at once and is limited in spacial resolution. 
-Novel super-resolution microscopy approaches such as STORM and PALM have enabled direct visualization of the fin-scale structures of the genome at unprecedented resolution [@Bonev2016].
+FISH is limited to examine a few pre-defined loci a few hundred cells at once and is limited in spatial resolution. 
+Novel super-resolution microscopy approaches such as STORM and PALM have enabled direct visualization of the fine-scale structures of the genome at an unprecedented resolution [@Bonev2016].
 Labeling of specific chromatin proteins, histone marks, or genomic loci allow to 
 analyze the dynamics of chromosomes at high resolution in living cells.
-However, despite spectacular technical progress, microscopy-based approaches are limited to a small number of genetic loci and do not allow a comprehensive analysis of nuclear architecture 
-of the complete genome. 
-Furthermore, the specific folding patterns observed in microscopy cannot be mapped to 
-genomic coordinates which hinders the integration with other genomic data. 
-However, future combination of imaging-based techniques with proximity-ligation experiments together with integrative computational models, might enable to study the real-time dynamics of chromatin organization with high resolution on the single cell level [@Stevens2017, @Flyamer2017]. 
+However, despite spectacular technical progress, microscopy-based approaches are limited to a small number of genetic loci and do not allow a comprehensive analysis of the nuclear architecture of the complete genome. 
+Furthermore, the specific folding patterns observed in microscopy cannot be mapped to genomic coordinates which hinders the integration with other genomic data. 
+However, a future combination of imaging-based techniques with proximity-ligation experiments together with integrative computational models might enable to study the real-time dynamics of chromatin organization with high resolution on the single cell level [@Stevens2017, @Flyamer2017]. 
 
 ### Proximity-ligation based method to quantify chromatin interactions
 
-The frequency of interactions between different loci in the genome can be experimentally
-measured by proximity ligation techniques [@Sati2017; @Schmitt2016]. These protocols are variations of the chromosome conformation capture (3C) experiment [@Dekker2002]. 3C works by the ability to 
-crosslink two genomic loci that are in close physical proximity in the nuclear
+The frequency of interactions between different loci in the genome can be
+measured experimentally by proximity ligation techniques [@Sati2017; @Schmitt2016]. These protocols are variations of the chromosome conformation capture (3C) experiment [@Dekker2002]. 
+3C works by the ability to cross-link two genomic loci that are in close physical proximity in the nuclear
 space by treating cells with formaldehyde. 
-The crosslinked chromatin is than digested by enzymes to fragment the 
+The cross-linked chromatin is than digested by enzymes to fragment the 
 genomic DNA. Than the fragmented DNA is re-ligated which results in 
 hybrid DNA molecules of restriction fragments that where in close
-physical proximity during crosslinking but normally originate from different regions in the linear genome sequence [@Dekker2013; @Andrey2017] (Fig. \@ref(fig:ProximityLigation)A). 
+physical proximity during cross-linking but originate from different regions in the linear genome sequence [@Dekker2013; @Andrey2017] (Fig. \@ref(fig:ProximityLigation)A). 
 
 <!-- ---------------------------------------------------------------- -->
 ```{r ProximityLigation, fig.cap='(ref:ProximityLigation)', out.width='80%', fig.align='center'}
@@ -122,16 +119,16 @@ Figure modified from [@Dekker2013].
 There exist several 3C-based methods which differ by the way the ligation product, which represents and chromatin interaction, is measured and quantified (Fig. \@ref(fig:ProximityLigation)B). 
 The classic 3C protocol allows to quantify hybrid DNA-product by quantitative PCR using specific primers to amplify the product junction [@Dekker2002].
 In Circular chromosome conformation capture (4C) experiments, a circular PCR is used to amplify 
-all hybrid DNA products ligated with a desired restriction fragment, e.g. a specific viewpoint of interest. These products are than sequences to generate an interaction profile measuring all
+all hybrid DNA products that are ligated with a desired restriction fragment, e.g. a specific viewpoint of interest. These products are then sequences to generate an interaction profile measuring all
 interacting regions with this viewpoint [@Simonis2006; @Noordermeer2011].
 Another variant of 3C, Carbon copy chromosome conformation capture (5C), combines
 3C with hybrid capture approaches to identify up to millions of interactions in parallel between two large sets of loci, for example between a set of promoters and a set of distal regulatory elements [@Dostie2006; @Sanyal2012].
-Some methods combine chromatin immunoprecipitation to enrich for chromatin interactions between loci bound by specific proteins of interest or marked by post-translational histone modifications. 
-One of these methods is chromatin interaction analysis by paired-end tag sequencing (ChIA-PET), which allows for genome-wide analysis of long-range interactions between sites bound by a protein of interest [@Fullwood2009]. Therefore, ChIA-PET data represent a selected subset of all interactions, but is an efficient alternative to measure interactions at very high resolution [@Tang2015]. 
-The most unbiased method to quantify all pair-wise interactions genome-wide is Hi-C [@Lieberman-Aiden2009]. After the initial restriction enzyme step of 3C, in Hi-C, the ends are filled with a biotin-marked nucleotide and subsequently re-ligated. A streptavidin pull-down step is used to enrich for the chimeric products, which are than sequenced using paired-end sequencing technology. Each read from the resulting read-pairs is than aligned independently to the reference genome to identify the originating position of the sequenced restriction fragment. 
-Thereby each read pair represent a pairwise physical interaction of the corresponding 
-regions. Interaction frequencies are usually analyzed by binning the genome into 
-equal sized regions several kb depending on sequencing depth.
+Other methods combine chromatin immunoprecipitation to enrich for chromatin interactions between loci bound by specific proteins of interest or marked by post-translational histone modifications. 
+One of these methods is chromatin interaction analysis by paired-end tag sequencing (ChIA-PET), which allows for genome-wide analysis of long-range interactions between sites bound by a protein of interest [@Fullwood2009]. Therefore, ChIA-PET data represent a selected subset of all interactions, but is an efficient alternative to measure interactions at high resolution [@Tang2015]. 
+The most unbiased method to quantify all pair-wise interactions genome-wide is Hi-C [@Lieberman-Aiden2009]. After the initial restriction enzyme step of 3C, in Hi-C, the ends are filled with a biotin-marked nucleotide and subsequently re-ligated. A streptavidin pull-down step is used to enrich for the chimeric products, which are then sequenced using paired-end sequencing technology. Each read from the resulting read-pairs is then aligned independently to the reference genome to identify the originating position of the sequenced restriction fragment. 
+Each read pair represent a pairwise physical interaction of the corresponding 
+regions. 
+Interaction frequencies are usually analyzed by binning the genome into equal sized regions of several kb depending on sequencing depth.
 While the first Hi-C study produced genome-wide interactions at 1Mb resolution [@Lieberman-Aiden2009], more recent studies could analyse folding patterns at 40kb [@Dixon2012], and later up to 1kb resolution [@Rao2014].
 
 <!-- libraries fo hypbrid DNA products are further digested with a second restiction enzyme and further re-ligated to g -->
@@ -158,19 +155,19 @@ Figure source [@Bonev2016] [https://www.nature.com/articles/nrg.2016.112/figures
 <!-- ---------------------------------------------------------------- -->
 
 ### Chromosomal territories and inter-chromosomal contacts
-The eukaryotic genome is highly organized in the interpahse nucelus. 
+The eukaryotic genome is highly organized in the interphase nucleus. 
 Chromosomes occupy distinct spatial regions, called chromosome territories, and 
 intermingle less than one would expect by chance [@Cremer2001]. This was first observed 
-using imaging based approaches, and is reflected in Hi-C interaction maps, where inter-chromosomal contacts occur order of magnitudes less frequent than intra-chromosomal contacts [@Lieberman-Aiden2009].
+using imaging based approaches, and is reflected in Hi-C interaction maps, where inter-chromosomal contacts occur an order of magnitudes less frequent than intra-chromosomal contacts [@Lieberman-Aiden2009].
 However, despite this spatial segregation of chromosome, intermingling of chromosome occurs and is associated with chromosomal translocations [@Branco2006, @Roukos2013, @Roukos2014].
-There are also specific gene regulatory interactions between different chromosomes [@DeLaat2007], for example olfactory receptor genes cluster densely in the nucleus of olfactory neurons to facilitate monoallelic expression of a single receptor gene per cell [@Monahan2015].
-While there are specific inter-chromosomal contacts, the genome is non-randomly organized in chromosomes which occupy distinct territories in the spacial nucleus.  
+There are also specific gene regulatory interactions between different chromosomes [@DeLaat2007], for example olfactory receptor genes cluster densely in the nucleus of olfactory neurons to facilitate mono-allelic expression of a single receptor gene per cell [@Monahan2015].
+While there are specific inter-chromosomal contacts, the genome is non-randomly organized in chromosomes which occupy distinct territories in the spacial nucleus.
 
 ### A/B compartments
 The ability to measure genome-wide chromatin contacts using Hi-C, 
 revealed that individual regions on chromosomes segregate by preferential interactions 
 into two compartments mayor clusters, referred to as A/B-compartments [@Lieberman-Aiden2009].
-Interestingly, regions A-compartments are associated with active histone-modifications and
+Interestingly, regions in A-compartments are associated with active histone-modifications and
 active transcription, whereas B-compartment is associated with heterochromatin, lamina association, and repressed genes. 
 
 
@@ -181,36 +178,35 @@ active transcription, whereas B-compartment is associated with heterochromatin, 
 ### Topologically associating domains (TADs)
 
 Compartments could be identified by clustering of long-range interactions in Hi-C maps
-with bin resolution of 1 Mb. In 2012 higher resolution Hi-C maps of up to 40 kb lead to the identification of genomic regions with preferential interactions wiht them. 
-These genomic regions were termed topologically associating domains (TADs) [@Dixon2012; @Nora2012; @Sexton2012]. They are opperationlly defined as genomic regions with frequent interactions of loci within the domain and decreased interactions across domain boundares [@Merkenschlager2016]. 
+with bin resolution of 1 Mb. In 2012 higher resolution Hi-C maps of up to 40 kb lead to the identification of genomic regions with preferential interactions with them. 
+These genomic regions were termed topologically associating domains (TADs) [@Dixon2012; @Nora2012; @Sexton2012]. They are operationally defined as genomic regions with frequent interactions of loci within the domain and decreased interactions across domain boundaries [@Merkenschlager2016]. 
 
 TADs can be identified from Hi-C interaction maps computationally by different algorithms [@Ay2015]. The directionality index is a score for each bin in the Hi-C matrix that quantifies the
-number of upstream versus downstream interactions of this bin. Using hidden Markov models TAD boundaries where than identified in regions where DI is changing drastically [@Dixon2012]. 
+number of upstream versus downstream interactions of this bin. Using hidden Markov models TAD boundaries where then identified in regions where DI is changing drastically [@Dixon2012]. 
 Other algorithms compute an insulation score as the extent to which interactions to cross potential TAD boundaries [@Crane2015].
 Later the Arrowhead algorithm was introduced to find "contact domains" as smaller nested structures along the diagonal of high resolution Hi-C matrices [@Rao2014].
-Furthermore, when analyzing Hi-C interactions at differnt length scales, hierarchies of TADs and sub-TADs could be identifed that overlap each other [@Filippova2014, @Fraser2015].  
+Furthermore, when analyzing Hi-C interactions at different length scales, hierarchies of TADs and sub-TADs could be identified that overlap each other [@Filippova2014, @Fraser2015].  
 The different algorithms and parameters used in each is only one source of variation 
-in reliably identifying TADs. Also the resolution of Hi-C maps, which is mainly defined by
+in reliably identifying TADs. Also, the resolution of Hi-C maps, which is mainly defined by
 sequencing depths but also the Hi-C protocol itself [@Rao2014], as well as different 
 normalization strategies for Hi-C contacts introduce variability [@Forcato2017]. 
-Therefore the number and size of TADs varies between different studies and cannot be directly compared. 
+Therefore, the number and size of TADs varies between different studies and cannot be directly compared. 
 
-The first studies on TADs identifed around 3000 TADs in human and mouse genomes with a median size of ~800 kb [@Dixon2012] and ~100 kb in *Drosophila* gneomes [@Sexton2012].
+The first studies on TADs identified around 3000 TADs in human and mouse genomes with a median size of ~800 kb [@Dixon2012] and ~100 kb in *Drosophila* genomes [@Sexton2012].
 Analysis of 1kb or 5kb resolution Hi-C matrixes resulted in nested "contact domains" 
-with median size of 185 kb (range 40 kb - 3 Mb) in human and mouse cells [@Rao2014].
+with a median size of 185 kb (range 40 kb - 3 Mb) in human and mouse cells [@Rao2014].
 
-Importantly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb in size detected by microscopy approaches [@Cremer2010; @Gibcus2013]. Annother connection of Hi-C derived 
-interaction maps with previous microscopy observations, is that TADs in *Drosophila* correspond to bands of polytene chromosomes [@Eagen2015].
+Importantly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb in size detected by microscopy approaches [@Cremer2010; @Gibcus2013]. Another connection of Hi-C derived interaction maps with previous microscopy observations, is that TADs in *Drosophila* correspond to bands of polytene chromosomes [@Eagen2015].
 
 The spatial positioning of TADs correlate with many genomic features measured along the
 linear genome [@Merkenschlager2016]. 
-TAD boudnaries are enriched for binding of "insulator protins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundares are associated 
-with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensivity, actie transcription, 
+TAD boundaries are enriched for binding of "insulator proteins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundaries are associated 
+with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription, 
 and house-keeping genes [@Dixon2012].
 Furthermore, TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
 Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012]
 
-There is acumulating evidence, that TADs are fundamental units of chromosome organization [@Dixon2016]
+Alltogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
 - [X] Definition, number, and size
@@ -222,10 +218,16 @@ There is acumulating evidence, that TADs are fundamental units of chromosome org
 
 ### Chromatin loops
 
-In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
-These engage in dynamic long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
-TADs in tern cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016]. 
+- Loop domains
+- Architectural proteins
+- Enhancer-promoter loops
+- Polycomp mediated loops
+- Gene loops
 
+
+In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
+These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
+TADs in form cluster by their epi-genomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016]. 
 
 ## Dynamics of chromatin structure
 - Cell-type invariant TADs  
@@ -244,37 +246,38 @@ weather TADs represent only structural units of the genome or also
 functional building blocks, in which genes regulation is coordinated.
 
 
-### Is the three-dimensonal folding of genomes associated with co-regulation of functionally related genes?  {-}
+### Is the three-dimensional folding of genomes associated with co-regulation of functionally related genes?  {-}
 - How are duplicated genes during evolution distributed in the three-dimensional genome architecture? 
-- Can TADs provide regulatory environment for co-regulation of duplicated genes?
+- Can TADs provide a regulatory environment for co-regulation of duplicated genes?
 - (Are TADs functional genomic units in which genes are co-regulated?)
 - (Are paralog genes co-regulated in the 3D chromatin architecture of genomes?)
 
-### Are TADs functional buidling blocks of genomes and subjected to selective preasure during evolution? {-}
+### Are TADs functional building blocks of genomes and subjected to selective pressure during evolution? {-}
 - Are TADs conserved during evolution or disrupted by rearrangements?
 - Are changes of TADs during evolution associated with changes in gene expression profiles?
 - (Are TADs stable units that are often transmitted as a whole than disrupted by rearrangements?)
 
-### Is the disruption of TADs by rearrangements also associated to genetic diseases?  {-}
+### Is the disruption of TADs by rearrangements also associated to genetic diseases? {-}
 - Can TADs be used to interpret position effects of rearrangements in genetic diseases?
 - Can chromatin interaction data and TADs be integrated with phenotype data to predict pathomechanism of balanced chromosomal rearrangements?
 
-### Can chromatin looping interactions be predicted by ChIP-seq and sequence features?  {-}
+### Can chromatin looping interactions be predicted by ChIP-seq and sequence features? {-}
 - Are there signals form TF ChIP-seq data at chromatin looping anchors that predict long-range contacts?
 - Does the gnomic sequence encode features that are predictive for chromatin looping interactions?
 - Can we provide a computational method to predict chromatin looping interactions in specific cell-types and conditions of interest?
 
+
 ## Structure of this thesis
 
-These questions are addressed and discussed in the following for chapters. 
+The followig four chapters adress and discuss these questions. 
 First, we focus on duplicated genes in the human genome. Because of
 their related sequence and function, shared evolutionary history, and
-close co-localization in the genome they represent an interesting model
+close colocalization in the genome they represent an interesting model
 to study how genome folding is related to regulation of gene expression
-during evolution (Chapter [Paralog genes](#ch:paralog_regulaion)). Furthermore, we make use of
-deeply sequenced genomes of other vertebrates to systematically
+during evolution (Chapter [Paralog genes](#ch:paralog_regulaion)). 
+We analyze whole-genome alignement between human and other vertebrate genomes to systematically
 investigate whether TADs represent conserved building blocks of genomes
-and whether rearrangements are associated with altered gene expression
+and whether rearrangements of TADs lead to altered gene expression
 programs (Chapter [TAD evolution](#ch:TAD_evolution)). 
 Next, we will address disruption of
 chromatin organization by analyzing disease associated rearrangement
@@ -284,7 +287,6 @@ contacts in diseases (Chapter [Position effect](#ch:position_effect)).
 Finally, we will make
 use of recent insights in chromatin loop formation to provide a
 computational tool to predict chromatin loops from largely available
-genomic data, with the aim to facilitate association of TF binding sites
-in enhancers to regulated genes in many cell-types and condition, for
+genomic data, with the aim to facilitate the association of TF binding sites
+in enhancers to regulated genes in many cell types and condition, for
 which Hi-C like data is not available (Chapter [Loop prediction](#ch:loop_prediction)).
-
